# concordantmodes

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  zmat.py
.github/workflows/: CI.yml  lint.yaml  workflow.yml
concordantmodes/: __init__.py  algorithm.py  cma.py  directory_tree.py  f_convert.py  f_read.py  force_constant.py  g_matrix.py  g_read.py  gf_method.py  int2cart.py  molden_writer.py  off_diag.py  options.py  reap.py  rmsd.py  s_vectors.py  sapelo_template.py  sisyphus_template.py  submit.py  sym_helper.py  symmetry.py  ted.py  transf_disp.py  vulcan_template.py  zmat.py
concordantmodes/tests/: _test_h2o.py  _test_symmetry.py  _test_transf_disp.py  nohup.out  suite_execute.py  test_directory_tree.py  test_f_convert.py  test_f_read.py  test_g_matrix.py  test_gf_method.py  test_h2o.py  test_reap.py  test_s_vectors.py  test_symmetry.py  test_transf_disp.py  test_zmat.py
concordantmodes/tests/ref_data/symmetry_test/: c2v_water_zmat_del  c2v_water_zmat_del_old  c3v_ammonia_zmat_del  c3v_ammonia_zmat_red
examples/1_H2O/molpro/CMA0A/Custom_script/: main.py  sub_script.sh
examples/1_H2O/molpro/CMA0A/Delocalized/: main.py
examples/1_H2O/molpro/CMA0A/No_Spec_Deloc/: main.py  zmat
examples/1_H2O/molpro/CMA0B/ZMAT/: main.py
examples/1_H2O/molpro/CMA1/: MOLDEN  nohup.out
examples/1_H2O/molpro/CMA1/Disps/: Concordant.e1218060.1  Concordant.e1218060.2  (+9 more)
examples/2_Methanol/molpro/CMA0B/: main.py
examples/2_Methanol/psi4/CMA0B/: main.py
examples/3_Ammonia/molpro/CMA0A/: main.py
examples/3_Ammonia/molpro/CMA1/: MOLDEN  main.py  nohup.out
examples/4_cyclopropane/: .nfs0000000000316eb600000398  MOLDEN  main.py  nohup.out  zmat
examples/5_benzene/: .nfs00000000002f077300000290
examples/5_benzene/molpro/CMA2A/: main.py
examples/6_Psi4_script/: Psi4_CMA.py
tests/: test_g_matrix.py
(+477 files in other folders)
