[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "Concordant_Modes"
dynamic = ["version"]
description = "Uses normal modes at a lower level of theory to compute higher level force constants"
readme = "README.md"
#license = "BSD-3C"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.13.3",
    "qcelemental>=0.24.0",
    "scipy >= 1.4",
    "sympy",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-pep8",
]

[project.urls]
Homepage = "https://github.com/CCQC/ConcordantModes"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/concordantmodes",
]
[tool.hatch.version]
source = "vcs"

